<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/purple_500"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/perfil"/>
        <TextView
            android:id="@+id/nameid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="@string/app_nav_header_perfil"/>
    </LinearLayout>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textSize="16dp"
        android:text="@string/app_header_status"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/user_matricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textSize="16dp"
        android:text="@string/app_header_matricula"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/user_carrera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textSize="16dp"
        android:text="@string/app_header_carrera"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"/>

</LinearLayout>